--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -66,8 +66,8 @@
             android:ems="10"
             android:hint="enter phone number"
             android:inputType="phone"
-            app:layout_constraintTop_toBottomOf="@+id/emailAddress"
-            tools:layout_editor_absoluteX="120dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/emailAddress" />
 
         <EditText
             android:id="@+id/etPassword"
